# Term-

./: .gitignore  create-buildsystem-linux.py  create-buildsystem-windows.py  create-buildsystem.py
scripts/: create-buildsystem-linux.py  create-buildsystem-windows.py
src/: CMakeLists.txt
src/include/: config.h  term.h  terminal.h
src/lib/: CMakeLists.txt  console.cpp  console.h  except.h  screen.h  term.cpp  terminal.cpp
src/lib/Unix/: CMakeLists.txt  console_impl.cpp  console_impl.h  screen_impl.cpp  utils.cpp  utils.h
src/lib/Windows/: CMakeLists.txt  console_impl.cpp  console_impl.h  screen_impl.cpp  utils.cpp  utils.h
src/loader/: CMakeLists.txt  libload.h  main.c  main.cpp
src/loader/Unix/: libload.c
src/loader/Windows/: CMakeLists.txt  libload.c
